tests/fixtures/invalid/exp_requires_dimensionless.gcl
// error: exp() requires Dimensionless argument
param alt: Length = 400.0 km;
node bad: Dimensionless = exp(@alt);
